# Prometheus

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  README_EN.md  compile_ARM.sh  compile_GFKD.sh  compile_aircraft_sitle.sh  compile_airsim.sh  compile_all.sh  compile_communication.sh  compile_control.sh  compile_control_planning.sh  compile_detection.sh  compile_drl.sh  compile_ego.sh  compile_experiment.sh  compile_fmt.sh  compile_gazebo.sh  compile_gazebo_simulator.sh  compile_matlab.sh  compile_mission.sh  compile_motion.sh  compile_motion_planning.sh  compile_new.sh  compile_planning.sh  compile_simulator_utils.sh  compile_spirecv.sh  compile_station.sh  compile_swarm.sh  compile_ugv_control.sh  complie_all.sh  complie_slam.sh  download_detection_submodules.sh  ego_test.sh  日志.md
GFKD_ws/: CMakeLists.txt  GFKD.md  package.xml
GFKD_ws/launch/: 3dlidar_mapping.rviz  advanced_param.xml  depth_to_octomap.launch  ego_planner.launch  ego_planner_depth.launch  gazebo_world.launch  main.launch  px4_sitl.launch  px4_sitl_p450.launch  px4_sitl_p450_3dlidar.launch  px4_sitl_p450_d435i.launch  rtab_map.rviz  rtabmap.launch  rviz.launch  rviz_3Dlidar.launch  rviz_visual.launch  scan_to_octomap.launch  visual_mapping.rviz
GFKD_ws/scripts/: ego_planner_1uav_gfkd_octomap.sh  simulation_p230.sh  simulation_p450.sh  simulation_p450_2dlidar.sh  simulation_p450_3dlidar.sh  simulation_p450_d435i_depth.sh  simulation_p450_d435i_octomap.sh  simulation_p450_d435i_rtabmap.sh  test.sh
GFKD_ws/src/: main.cpp
Modules/aaa_old_files/communication/: CMakeLists.txt
Modules/aaa_old_files/control/: CMakeLists.txt  package.xml
Modules/aaa_old_files/mocap_ekf/: CMakeLists.txt
Modules/communication/: CMakeLists.txt  README.md  package.xml
Modules/communication/include/: autonomous_landing_topic.hpp  communication.hpp  communication_bridge.hpp  custom_data_segment.hpp  ego_planner_swarm_topic.hpp  gfkd_rviz_topic.hpp  gimbal_basic_topic.hpp  message_convert.hpp  object_tracking_topic.hpp  param_manager.hpp  rviz_reduce_the_frequency.hpp  rviz_topic.hpp  swarm_control_topic.hpp  uav_basic_topic.hpp  ugv_basic_topic.hpp
Modules/communication/launch/: P600_autoload.sh  P600_communication.launch  bridge.launch  config.yaml  config_airsim.yaml  h16_bridge.launch  image2rtsp.launch  location_source.yaml  location_source_airsim.yaml  rtmp_stream.launch  rtsp_steam.launch  rviz_reduce_the_frequency.launch  simulation_bridge.launch  simulation_bridge_airsim.launch  swarm_bridge.launch  switch_location_source.launch
Modules/communication/rtmp_stream/: ocv_rtmp_stream.py
Modules/communication/rtsp_stream/: gstreamer_rtsp_stream.py
Modules/communication/src/: autonomous_landing_topic.cpp  communication.cpp  communication_bridge.cpp  custom_data_segment.cpp  ego_planner_swarm_topic.cpp  gfkd_rviz_topic.cpp  gimbal_basic_topic.cpp  ground_station_bridge.cpp  main.cpp  msg_pub_test.cpp  object_tracking_topic.cpp  param_manager.cpp  rviz_reduce_the_frequency.cpp  rviz_topic.cpp  swarm_control_topic.cpp  uav_basic_topic.cpp  ugv_basic_topic.cpp
Modules/communication/utils/: rviz_reduce_the_frequency.cpp  switch_location_source.cpp
Modules/control/: CMakeLists.txt  README.md  package.xml  中文说明.md
Modules/control/cfg/: dynamic_param.cfg
Modules/control/config/: autonomous_landing.yaml  control_parameter.yaml  px4_pos_controller.yaml  target_tracking.yaml  terminal_control.yaml
Modules/control/include/: Frame_tf_utils.h  KeyboardEvent.h  LeadLagFilter.h  circle_trajectory.h  command_to_mavros.h  controller_test.h  math_utils.h  pos_controller_NE.h  pos_controller_PID.h  pos_controller_Passivity.h  pos_controller_UDE.h  pos_controller_cascade_PID.h  prometheus_control_utils.h  px4_command_utils.h  serial.hpp  state_from_mavros.h  swarm_control_utils.h
Modules/control/launch/: Parameter_for_control.yaml  SITL.launch  autonomous_landing.launch  collision_avoidance.launch  collision_avoidance_streo.launch  config_file.rviz  payload_drop.launch  px4_pos_controller.launch  px4_pos_estimator.launch  px4_sender.launch  rviz_config.rviz  rviz_config_global_planning.rviz  sitl_controller_test.launch  square.launch  target_tracking.launch  terminal_control.launch  terminal_control.yaml  tfmini.launch  three_uav_mavros_sitl.launch
Modules/control/msg/: Topic_for_log.msg
Modules/control/src/: formation_control.cpp  ground_station.cpp  ground_station_msg.cpp  px4_geometry_controller.cpp  px4_pos_controller.cpp  px4_pos_estimator.cpp  px4_sender.cpp  rover_pos_controller.cpp  terminal_control_comb.cpp  turtlebot_control.cpp
Modules/control/wiki/: 外环控制器修改及测试.md
Modules/ground_station/: CMakeLists.txt  package.xml
Modules/ground_station/include/: prometheus_station_utils.h
Modules/ground_station/src/: ground_station.cpp  ground_station_aruco.cpp  swarm_ground_station.cpp
Modules/mission/: CMakeLists.txt  README.md  package.xml
Modules/mission/autonomous_landing/: autonomous_landing.cpp  autonomous_landing.yaml  (+7 more)
Modules/msgs/: CMakeLists.txt  README.md  package.xml
Modules/object_circlex_detection/: CMakeLists.txt  package.xml
Modules/object_detection/: CMakeLists.txt  README.md  conda_env.yaml  conda_env_cpu.yaml  conda_env_gpu.yaml  package.xml  readme.md
Modules/prometheus_case2_ugv/: CMakeLists.txt  package.xml
Modules/simulator_utils/: CMakeLists.txt  package.xml  simulator_utils.md
Modules/swarm_communication/: CMakeLists.txt  package.xml
Modules/tutorial_demo/: CMakeLists.txt  CMakeLists_backup.txt
Modules/uav_control/: CMakeLists.txt  PrometheusSDK.md  package.xml
Modules/uav_control_fmt/: CMakeLists.txt  README.md  fmt_test.cpp  fmt_test.h  package.xml
Modules/ugv_control/: CMakeLists.txt  package.xml
Simulator/gazebo_simulator/: CMakeLists.txt  README.md  package.xml  source_environment.sh
Simulator/gazebo_simulator_new/: package.xml
Simulator/livox_laser_gazebo_plugins/: CMakeLists.txt  package.xml
Simulator/realsense_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
Simulator/velodyne_gazebo_plugins/: CMakeLists.txt  package.xml
(+3750 files in other folders)
