<?xml version="1.0"?>
<package format="2">
  <name>prometheus_communication</name>
  <version>0.0.0</version>
  <description>The communication module</description>

  <maintainer email="qiyh@todo.todo">qiyh</maintainer> 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
</package>
