<?xml version="1.0"?>
<package format="2">
  <name>prometheus_communication_bridge</name>
  <version>0.0.0</version>
  <description>The ground_station_bridge module</description>

  <maintainer email="Amov@gmail.com">Amov</maintainer> 
  <license>Aomv</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>std_srvs</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
    <build_depend>mavros_msgs</build_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>
</package>
